--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -1,3 +1,6 @@
+body{
+  z-index: -10;
+}
 .u-section-1 {
   background-image: url("bg.jpg");
   background-repeat: no-repeat;
@@ -42,6 +45,7 @@
 body {
   background-color: #fff;
 }
+
 .u-section-1 .u-btn-1 {
   font-weight: 700;
   background-image: none;
@@ -49,6 +53,7 @@ body {
   margin: 33px auto 0 0;
   padding: 12px 58px 13px;
   float: right;
+  z-index: 10;
 }
 .u-section-1 .u-image-1 {
   min-height: 500px;
@@ -57,8 +62,8 @@ body {
   opacity: 0.9;
   border-radius: 2%;
 }
-.u-section-1 .u-container-layout-2 {
-  padding: 30px 0;
+.u-section-1 .u-container-layout-1 {
+  z-index: 4;
 }
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
